--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href = "https://www.cars24.com/buy-used-car?f=year%3Abw%3A2019%2C2023&sort=bestmatch&listingSource=Homepage_Filters&storeCityId=2&pinId=110001">Toyota</a></li>
+			<li><a href = "https://www.cardekho.com/">Honda</a></li>
+			<li><a href = "https://www.lexusindia.co.in/en.html">Lexus</a></li>
+		</ul>
+	</nav>
+	
+	<div>
+		<h2>3 random audios</h2>
+	<audio controls>
+		<source src = "http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+	</audio>
+	<audio controls>
+		<source src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+	</audio>
+		<audio controls>
+			<source src = " http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+		</audio>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
