--- a/main.html
+++ b/main.html
@@ -18,18 +18,9 @@
 	
 	<div>
 		<h2>3 random audios</h2>
-	<audio controls>
-		<source src = "http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
-		 Your browser does not support the audio element.
-	</audio><br>
-	<audio controls>
-		<source src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
-		 Your browser does not support the audio element.
-	</audio><br>
-		<audio controls>
-			<source src = " http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
-			 Your browser does not support the audio element.
-		</audio>
+		<audio controls src = "http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio><br>
+		<audio controls src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio><br>
+		<audio controls src = " http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
